fix(schedule): show events with better contrast

--- a/src/static/pycontw-2020/styles/pages/_events.scss
+++ b/src/static/pycontw-2020/styles/pages/_events.scss
@@ -153,7 +153,7 @@ main {
 						height: 100%;
 						flex-direction: column;
 						text-align: center;
-						background: $salmon-dark;
+						background: rgba(255, 255, 255, 0.7);
 						border-radius: inherit;
 					}
 
@@ -162,7 +162,7 @@ main {
 						flex-direction: column;
 						width: 100%;
 						height: 100%;
-						background: rgba($salmon-dark, 0.5);
+						background: rgba(255, 255, 255, 0.7);
 						border-radius: inherit;
 
 						.title {
